fix-logo-tablet : add flex-grow to show header logo on tablet

--- a/src/Resources/app/storefront/src/scss/layout/header.scss
+++ b/src/Resources/app/storefront/src/scss/layout/header.scss
@@ -138,6 +138,7 @@ $header-padding-bottom: rem($dmf-header-padding-bottom);
         padding-top: 0;
         padding-bottom: 0;
         margin: 0;
+        flex-grow: 1;
     }
 
     .header-row {
